<resources>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Vadiando</string>
    <string name="action_settings">Configurações</string>
    <string name="fragment_A">Esta é a tela de Rodas</string>
    <string name="fragment_B">Esta é a tela de Eventos</string>
    <string name="fragment_C">Esta é a tela de Aulas</string>
    <string name="pular">Pular</string>
    <string name="texto_contato">Aqui terá escrito todo o texto de contato.</string>
    <string name="bemvindo">Bem Vindo!</string>
    <string name="fiquepordentro">Fique por dentro de todos os eventos e rodas
        de Capoeira e Cultura pelo mundo</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string-array name="titles_Tab">
        <item>RODAS</item>
        <item>EVENTOS</item>
        <item>AULAS</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
</resources>


